# hitool-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  MIGRATION_STATUS.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md  deny.toml  libnull.rlib
crates/hitool/: Cargo.toml
crates/hitool-ai/: Cargo.toml
crates/hitool-ai/src/: compat.rs  lib.rs  models.rs  operations.rs
crates/hitool-ai/tests/: ai_parity.rs
crates/hitool-aop/: Cargo.toml
crates/hitool-aop/src/: aop_tests.rs  aspects.rs  interceptor.rs  invocation.rs  lib.rs
crates/hitool-aop/tests/: aop_parity.rs
crates/hitool-bloom-filter/: Cargo.toml
crates/hitool-bloom-filter/src/: hashes.rs  lib.rs  tests.rs
crates/hitool-bloom-filter/tests/: bloom_filter_parity.rs
crates/hitool-cache/: Cargo.toml
crates/hitool-cache/src/: compat.rs  file_cache.rs  lib.rs
crates/hitool-cache/tests/: cache_parity.rs
crates/hitool-captcha/: Cargo.toml
crates/hitool-captcha/src/: audio.rs  compat.rs  lib.rs  raster.rs
crates/hitool-captcha/tests/: captcha_parity.rs
crates/hitool-compat-hutool/: Cargo.toml
crates/hitool-compat-hutool/src/: lib.rs
crates/hitool-core/: Cargo.toml
crates/hitool-core/benches/: serialization.rs
crates/hitool-core/src/: advanced_codec.rs  array_util.rs  boolean_util.rs  builder.rs  char_util.rs  charset_util.rs  class_loader_util.rs  codec.rs  coll_stream_util.rs  coll_util.rs  collection.rs  collection_adapters.rs  collection_iter.rs  collection_partition.rs  collection_types.rs  compress.rs  date.rs  dict.rs  enum_util.rs  error.rs  escape_util.rs  file_util.rs  hash_util.rs  hex_util.rs  hutool_codec.rs  id.rs  idcard_util.rs  io_util.rs  lib.rs  list_util.rs  map_util.rs  mutable.rs  number_util.rs  object_util.rs  opt.rs  primitive_array_util.rs  radix_codec.rs  random_util.rs  re_util.rs  reflect_util.rs  (+10 more)
crates/hitool-core/tests/: advanced_codec_parity.rs  annotation_common.rs  annotation_helpers_parity.rs  annotation_parity.rs  annotation_parity_gap.rs  array_util_parity.rs  assert_parity.rs  async_util_parity.rs  bean_parity.rs  boolean_util_parity.rs  builder_parity_gap.rs  builder_real.rs  byte_util_parity.rs  char_sequence_util_parity.rs  char_util_parity.rs  charset_util_parity.rs  clone_parity_gap.rs  clone_support_parity.rs  codec_parity.rs  coll_stream_util_parity.rs  coll_util_parity.rs  coll_util_real.rs  collection_adapters_parity.rs  collection_iter_parity.rs  collection_partition_parity.rs  collection_types_parity.rs  comparator_parity.rs  comparator_parity_gap.rs  compare_util_parity.rs  compiler_parity_gap.rs  compiler_real.rs  compress_real.rs  convert_parity.rs  coordinate_util_parity.rs  coverage_boost.rs  credit_code_util_parity.rs  date_issue_parity.rs  date_local_parity.rs  date_types_parity.rs  date_util_parity.rs  (+64 more)
crates/hitool-cron/: Cargo.toml
crates/hitool-cron/src/: compat.rs  lib.rs  pattern.rs  timingwheel.rs
crates/hitool-cron/tests/: cron_parity.rs
crates/hitool-crypto/: Cargo.toml
crates/hitool-crypto/src/: asn1_util.rs  bc_util.rs  cipher_wrapper.rs  ecies_util.rs  hutool_facade.rs  key_util.rs  legacy.rs  lib.rs  pbkdf2_util.rs  pem_util.rs  rsa_util.rs  sm2_util.rs  spec_util.rs  symmetric_legacy.rs
crates/hitool-crypto/tests/: crypto_byte_level_parity.rs  crypto_expansion.rs  crypto_expansion_2.rs  crypto_expansion_3.rs  crypto_facade_complete.rs  crypto_parity.rs  crypto_parity_extended.rs  crypto_parity_facade.rs  crypto_parity_gap.rs  crypto_util_parity.rs  sm_byte_level_parity.rs
crates/hitool-db/: Cargo.toml
crates/hitool-db/src/: dao_template.rs  db.rs  global_db_config.rs  handler.rs  hutool_page.rs  lib.rs  meta.rs  meta_types.rs  session.rs  thread_local_connection.rs  wrapper.rs
crates/hitool-db/tests/: db_expansion.rs  db_expansion_2.rs  db_expansion_3.rs  db_expansion_4.rs  db_expansion_5.rs  db_extended_parity.rs  db_facade_parity.rs  db_parity.rs  db_parity_gap.rs
crates/hitool-dfa/: Cargo.toml
crates/hitool-dfa/src/: lib.rs  stop_char.rs  word_tree.rs
crates/hitool-dfa/tests/: dfa_parity.rs
crates/hitool-extra/: Cargo.toml
crates/hitool-extra/src/: archive.rs  emoji.rs  exceptions.rs  expression.rs  ftp.rs  image.rs  lib.rs  mail.rs  mail_facade.rs  qrcode.rs  spring.rs  ssh.rs  template.rs  tokenizer.rs
crates/hitool-extra/tests/: extra_compress_parity.rs  extra_expansion.rs  extra_expansion_2.rs  extra_expansion_3.rs  extra_expansion_4.rs  extra_expansion_5.rs  extra_expansion_6.rs  extra_image_parity.rs  extra_mail_parity.rs  extra_misc_parity.rs  extra_parity.rs  extra_qrcode_parity.rs  extra_servlet_spring_parity.rs  extra_template_parity.rs
crates/hitool-http/: Cargo.toml
crates/hitool-http/src/: base.rs  config.rs  coverage_tests.rs  global_config.rs  http_util.rs  input_stream.rs  interceptor.rs  lib.rs  metadata.rs  progress.rs  query.rs  request.rs  resource.rs  response.rs  server.rs  ssl.rs  useragent.rs  webservice.rs
crates/hitool-http/tests/: content_type_parity.rs  html_util_parity.rs  http_expansion.rs  http_expansion_2.rs  http_expansion_3.rs  http_expansion_4.rs  http_network_parity.rs  http_parity.rs  http_util_offline_parity.rs  http_util_request_facade_parity.rs  useragent_util_parity.rs
crates/hitool-json/: Cargo.toml
crates/hitool-json/src/: compat.rs  lib.rs  parser.rs  xml.rs
crates/hitool-json/tests/: json_array_full_parity.rs  json_array_parity.rs  json_expansion.rs  json_expansion_2.rs  json_extended_parity.rs  json_issue_full_parity.rs  json_issue_parity.rs  json_object_parity.rs  (+5 more)
crates/hitool-jwt/: Cargo.toml
crates/hitool-log/: Cargo.toml
crates/hitool-macros/: Cargo.toml
crates/hitool-poi/: Cargo.toml
crates/hitool-setting/: Cargo.toml
crates/hitool-socket/: Cargo.toml
crates/hitool-system/: Cargo.toml
crates/hitool-test-support/: Cargo.toml
crates/hutool-compat-hutool/: Cargo.toml
crates/hutool-core/: Cargo.toml
crates/hutool-crypto/: Cargo.toml
crates/hutool-extra/: Cargo.toml
crates/hutool-macro/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: codec_round_trip.rs  json_parse.rs  structured_parsers.rs  text_search.rs
(+2463 files in other folders)
