[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["wandl <hiwepy@gmail.com>"]
repository = "https://github.com/hiwepy/hitool-rs"
homepage = "https://github.com/hiwepy/hitool-rs"
readme = "README.md"

[workspace.dependencies]
base64 = "0.22.1"
aho-corasick = "1.1.4"
aes = "0.8.4"
aes-gcm = "0.10.3"
argon2 = { version = "0.5.3", features = ["std", "zeroize"] }
block-padding = "0.3.3"
cbc = "0.1.2"
chacha20 = "0.9.1"
cmac = "0.7.2"
der = "0.7.10"
des = "0.8.1"
ecb = "0.1.2"
async-trait = "0.1.89"
async-stream = "0.3.6"
bloomfilter = "3.0.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
bincode = { version = "2.0.1", features = ["serde"] }
config = { version = "0.15.25", default-features = false, features = ["json", "toml", "yaml"] }
criterion = { version = "0.7.0", default-features = false, features = ["cargo_bench_support"] }
cron = "0.15.0"
crc32fast = "1.5.0"
csv = "1.4.0"
data-encoding = "2.11.0"
encoding_rs = "0.8.35"
emojis = "0.9.0"
generic-array = "0.14.7"
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-rs"] }
hex = "0.4.3"
hmac = "0.12.1"
md-5 = "0.10.6"
pbkdf2 = "0.12.2"
idna = "1.1.0"
image = { version = "=0.25.9", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
indexmap = { version = "2.14.0", features = ["serde"] }
notify = "8.2.0"
num-bigint = "0.5.1"
lettre = { version = "0.11.22", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1-rustls-tls", "tracing"] }
futures-core = "0.3.32"
font8x8 = "0.3.1"
jsonwebtoken = { version = "=10.3.0", default-features = false, features = ["rust_crypto"] }
p256 = { version = "=0.13.2", features = ["ecdsa", "ecdh", "pem"] }
p384 = "=0.13.1"
rand_core06 = { package = "rand_core", version = "0.6.4", features = ["getrandom"] }
rsa = { version = "=0.9.10", features = ["pem", "sha2", "std"] }
sha1 = "0.10.6"
sm2 = { version = "=0.13.3", features = ["dsa", "pem", "arithmetic"] }
sm3 = "0.4.2"
sm4 = "0.5.1"
signature = "2.2.0"
rc4 = "0.1.0"
moka = { version = "0.12.15", features = ["sync"] }
musli = { version = "=0.0.149", default-features = false, features = ["alloc", "std"] }
parking_lot = "0.12.5"
percent-encoding = "2.3.2"
pinyin = "0.11.0"
proptest = "1.9.0"
proc-macro2 = "1.0.106"
postcard = { version = "1.1.3", features = ["use-std"] }
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
quote = "1.0.46"
quick-xml = "0.41.0"
regex = "1.13.1"
fancy-regex = "0.14.0"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "stream"] }
rhai = "1.25.1"
rust_decimal = "1.42.1"
rust_xlsxwriter = "0.96.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
serde_yaml_ng = "0.10.0"
secrecy = "0.10.3"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls"] }
syn = { version = "2.0.119", features = ["full"] }
thiserror = "2.0.18"
sysinfo = "0.36.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tokio = { version = "1.52.4", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
unicode-general-category = "1.1.0"
unicode-normalization = "0.1.24"
rand = "0.9.2"
tempfile = "3.27.0"
uuid = { version = "1.24.0", features = ["v4", "v5", "v3"] }
url = "2.5.8"
woothee = "0.13.0"
x509-cert = "0.2.5"
zeroize = "1.8.2"
zip = { version = "7.2.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

hitool = { version = "=0.1.0", path = "crates/hitool" }
hitool-ai = { version = "=0.1.0", path = "crates/hitool-ai" }
hitool-aop = { version = "=0.1.0", path = "crates/hitool-aop" }
hitool-bloom-filter = { version = "=0.1.0", path = "crates/hitool-bloom-filter" }
hitool-cache = { version = "=0.1.0", path = "crates/hitool-cache" }
hitool-captcha = { version = "=0.1.0", path = "crates/hitool-captcha" }
hitool-compat-hutool = { version = "=0.1.0", path = "crates/hitool-compat-hutool" }
hitool-core = { version = "=0.1.0", path = "crates/hitool-core" }
hitool-cron = { version = "=0.1.0", path = "crates/hitool-cron" }
hitool-crypto = { version = "=0.1.0", path = "crates/hitool-crypto" }
hitool-db = { version = "=0.1.0", path = "crates/hitool-db" }
hitool-dfa = { version = "=0.1.0", path = "crates/hitool-dfa" }
hitool-extra = { version = "=0.1.0", path = "crates/hitool-extra" }
hitool-http = { version = "=0.1.0", path = "crates/hitool-http" }
hitool-json = { version = "=0.1.0", path = "crates/hitool-json" }
hitool-jwt = { version = "=0.1.0", path = "crates/hitool-jwt" }
hitool-log = { version = "=0.1.0", path = "crates/hitool-log" }
hitool-script = { version = "=0.1.0", path = "crates/hitool-script" }
hitool-setting = { version = "=0.1.0", path = "crates/hitool-setting" }
hitool-socket = { version = "=0.1.0", path = "crates/hitool-socket" }
hitool-system = { version = "=0.1.0", path = "crates/hitool-system" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
