[package]
name = "hitool-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hitool-core = { path = "../crates/hitool-core" }
hitool-cron = { path = "../crates/hitool-cron" }
hitool-dfa = { path = "../crates/hitool-dfa" }
hitool-json = { path = "../crates/hitool-json" }
hitool-jwt = { path = "../crates/hitool-jwt" }
# easyexcel-rs = { path = "../easyexcel-rs" } # removed: engine crates are independent projects
serde_json = "1"
url = "2"

[[bin]]
name = "codec_round_trip"
path = "fuzz_targets/codec_round_trip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_parsers"
path = "fuzz_targets/structured_parsers.rs"
test = false
doc = false
bench = false

[[bin]]
name = "text_search"
path = "fuzz_targets/text_search.rs"
test = false
doc = false
bench = false

[[bin]]
name = "json_parse"
path = "fuzz_targets/json_parse.rs"
test = false
doc = false
bench = false
