[package]
name = "hitool-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Provider-neutral AI client and streaming abstractions for HiTool."

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
async-stream.workspace = true
futures-core.workspace = true
hitool-http.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
