[package]
name = "hitool-aop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Rust-native decorators, middleware, and interception utilities for HiTool."

[lints]
workspace = true

[dependencies]
parking_lot.workspace = true
