[package]
name = "hitool-bloom-filter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Bloom filter implementations and hash strategies for HiTool."

[lints]
workspace = true

[dependencies]
bloomfilter.workspace = true
encoding_rs.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
