[package]
name = "hitool-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Cache abstractions and production cache engines for HiTool."

[lints]
workspace = true

[dependencies]
moka.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
