[package]
name = "hitool-captcha"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Captcha generation and verification utilities for HiTool."

[lints]
workspace = true

[features]
default = []
raster = ["dep:base64", "dep:font8x8", "dep:image"]
audio = []

[dependencies]
base64 = { workspace = true, optional = true }
font8x8 = { workspace = true, optional = true }
image = { workspace = true, optional = true }
rand.workspace = true
thiserror.workspace = true
