[package]
name = "hitool-compat-hutool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Optional Hutool-style migration facade for HiTool."

[lints]
workspace = true

[dependencies]
hitool-core.workspace = true
hitool-json.workspace = true
serde.workspace = true
serde_json.workspace = true
