[package]
name = "hitool-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Core string, collection, codec, date, conversion, ID, and IO utilities for HiTool."

[lints]
workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
data-encoding.workspace = true
encoding_rs.workspace = true
flate2.workspace = true
hex.workspace = true
idna.workspace = true
indexmap.workspace = true
num-bigint.workspace = true
parking_lot.workspace = true
percent-encoding.workspace = true
rand.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tempfile.workspace = true
uuid.workspace = true
zip.workspace = true

[dev-dependencies]
proptest.workspace = true
