[package]
name = "hitool-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Core string, collection, codec, date, conversion, ID, and IO utilities for HiTool."

[lints]
workspace = true

[features]
# `swing` 子包对齐 cn.hutool.core.swing,跨平台桌面/截屏/键鼠模拟。
# 默认不启用,因为引入平台特定依赖(open/xcap/enigo)。
default = []
swing = ["dep:open", "dep:xcap", "dep:enigo", "dep:image", "dep:url"]

[dependencies]
base64.workspace = true
chrono.workspace = true
data-encoding.workspace = true
encoding_rs.workspace = true
flate2.workspace = true
hex.workspace = true
idna.workspace = true
indexmap.workspace = true
num-bigint.workspace = true
parking_lot.workspace = true
percent-encoding.workspace = true
rand.workspace = true
regex.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tempfile.workspace = true
unicode-general-category.workspace = true
uuid.workspace = true
zip.workspace = true

# Swing 子包依赖(feature-gated,默认不启用)
# 对齐 cn.hutool.core.swing:
# - DesktopUtil  → open     (跨平台调用系统默认浏览器/邮件/文件管理器)
# - ScreenUtil   → xcap     (跨平台屏幕捕获,Windows/macOS/Linux)
# - RobotUtil    → enigo    (跨平台键鼠模拟)
open = { version = "5", optional = true }
xcap = { version = "0.9", optional = true }
enigo = { version = "0.2", optional = true }
image = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
