[package]
name = "hitool-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "SQLx-based database, transaction, and pagination utilities for HiTool."

[lints]
workspace = true

[features]
default = ["sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]

[dependencies]
sqlx.workspace = true
thiserror.workspace = true
indexmap.workspace = true
regex.workspace = true
rust_decimal.workspace = true
num-bigint.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
