[package]
name = "hitool-dfa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "DFA and multi-pattern text matching utilities for HiTool."

[lints]
workspace = true

[dependencies]
aho-corasick.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
