[package]
name = "hitool-extra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Optional QR code, image, archive, mail, and extension utilities for HiTool."

[lints]
workspace = true

[features]
default = ["archive", "qrcode"]
archive = ["dep:zip"]
qrcode = ["dep:qrcode"]
image = ["dep:image"]
mail = ["dep:lettre", "dep:secrecy"]

[dependencies]
image = { workspace = true, optional = true }
lettre = { workspace = true, optional = true }
qrcode = { workspace = true, optional = true }
secrecy = { workspace = true, optional = true }
thiserror.workspace = true
zip = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
