[package]
name = "hitool-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Secure, bounded HTTP client utilities for HiTool."

[lints]
workspace = true

[features]
default = ["useragent"]
blocking = ["reqwest/blocking"]
useragent = ["dep:regex", "dep:woothee"]

[dependencies]
rand.workspace = true
regex = { workspace = true, optional = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
woothee = { workspace = true, optional = true }

[dev-dependencies]
async-stream.workspace = true
