[package]
name = "hitool-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Secure, bounded HTTP client utilities for HiTool."

[lints]
workspace = true

[features]
default = ["useragent", "html"]
blocking = ["reqwest/blocking"]
useragent = ["dep:regex", "dep:woothee"]
html = ["dep:fancy-regex"]

[dependencies]
encoding_rs.workspace = true
hitool-core.workspace = true
indexmap.workspace = true
rand.workspace = true
regex = { workspace = true, optional = true }
fancy-regex = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["cookies", "multipart"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
woothee = { workspace = true, optional = true }

[dev-dependencies]
async-stream.workspace = true
flate2.workspace = true
