[package]
name = "hitool-jwt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Strict JSON Web Token creation and validation utilities for HiTool."

[lints]
workspace = true

[dependencies]
jsonwebtoken.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
