[package]
name = "hitool-jwt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Strict JSON Web Token creation and validation utilities for HiTool."

[lints]
workspace = true

[dependencies]
base64.workspace = true
jsonwebtoken.workspace = true
p256.workspace = true
p384.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
