[package]
name = "hitool-log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Tracing-based logging, spans, and redaction utilities for HiTool."

[lints]
workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
