[package]
name = "hitool-poi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Office document (Excel/Word/OFD) utilities for HiTool — placeholder stubs pending easyexcel-rs/easydoc-rs engines."

[lints]
workspace = true

[dependencies]
thiserror.workspace = true