[package]
name = "hitool-setting"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Layered configuration and settings utilities for HiTool."

[lints]
workspace = true

[dependencies]
config.workspace = true
serde.workspace = true
