[package]
name = "hitool-setting"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Layered configuration and settings utilities for HiTool."

[lints]
workspace = true

[dependencies]
config.workspace = true
chrono.workspace = true
encoding_rs.workspace = true
indexmap.workspace = true
notify.workspace = true
num-bigint.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
