[package]
name = "hitool-socket"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Asynchronous TCP and UDP utilities for HiTool."

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tokio.workspace = true
