[package]
name = "hitool-system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Operating system, process, and runtime inspection utilities for HiTool."

[lints]
workspace = true

[dependencies]
sysinfo.workspace = true
