[package]
name = "hitool-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Test fixtures and support utilities for HiTool crates."
publish = false

[lints]
workspace = true

[dependencies]
serde_json.workspace = true
tempfile.workspace = true
